// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Markdown /> render matches snapshots 1`] = `""`;

exports[`<Markdown /> render matches snapshots 2`] = `""`;

exports[`<Markdown /> render matches snapshots 3`] = `
<Markdownstyles__StyledMarkdown
  dangerouslySetInnerHTML={
    Object {
      "__html": "<h3>test content</h3>
",
    }
  }
/>
`;

exports[`<Markdown /> render matches snapshots 4`] = `
<Markdownstyles__StyledMarkdown
  dangerouslySetInnerHTML={
    Object {
      "__html": "<p>test content</p>",
    }
  }
/>
`;
